# batsat

./: .gitignore  .ignore  .rustfmt.toml  .sudoku-fast.ref  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  batsat.opam  sudoku-debug.sh  sudoku.sh
.github/workflows/: fast-forward.yml  rust.yml
benchs/: Makefile  benchpress.sexp  conf.toml  test.py
benchs/test_tool/: Cargo.toml
benchs/test_tool/src/: main.rs
ratsat/: Cargo.toml
ratsat/src/: alloc.rs  clause.rs  core.rs  dimacs.rs  intmap.rs  lib.rs  simp.rs  system.rs
src/: main.rs
src/batsat/: Cargo.toml
src/batsat-bin/: Cargo.toml
src/batsat-bin/src/: main.rs  system.rs
src/batsat-ipasir/: Cargo.toml  LIBS
src/batsat-ipasir/src/: lib.rs
src/batsat-ocaml/: .gitignore  Cargo.toml  Makefile  README.adoc  batsat.opam  dune
src/batsat-ocaml/src/: Batsat.ml  Batsat.mli  batsat_stubs.c.pre  dune  lib.rs
src/batsat-ocaml/tests/: dune  test1.ml
src/batsat-sudoku/: Cargo.toml
src/batsat-sudoku/src/: bref.rs  grid.rs  main.rs  parse.rs  solve.rs
src/batsat-term-allocator/: Cargo.toml
src/batsat-term-allocator/src/: lib.rs  manager.rs
src/batsat/src/: alloc.rs  callbacks.rs  clause.rs  core.rs  dimacs.rs  drat.rs  heap.rs  interface.rs  intmap.rs  lib.rs  theory.rs
src/icnf-solve/src/: Icnf_solve.ml  dune
src/ipasir/: Cargo.toml  LINK  makefile
src/ipasir/src/: lib.rs
src/lib/: Cargo.toml
src/lib/src/: clause.rs  core.rs  dimacs.rs  interface.rs  lib.rs
src/platsat/: Cargo.toml
src/platsat-bin/: Cargo.toml
src/platsat-bin/src/: main.rs  system.rs
src/platsat-ipasir/: Cargo.toml  makefile
src/platsat-ipasir/src/: lib.rs
src/platsat-sudoku/: Cargo.toml
src/platsat-sudoku/src/: grid.rs  parse.rs  solve.rs
src/platsat/src/: alloc.rs  callbacks.rs  clause.rs  core.rs  dimacs.rs  drat.rs  exact_sized_chain.rs  heap.rs  interface.rs  intmap.rs  lib.rs  theory.rs
src/ratsat/: Cargo.toml
src/ratsat/src/: alloc.rs  clause.rs  core.rs  intmap.rs  lib.rs  system.rs
src/smt/: Cargo.toml
src/smt/src/: lib.rs  manager.rs  manager.rs.back  pre_term.rs  term.rs
