
[workspace]

members = [
  "src/batsat",
  "src/batsat-bin",
  "src/batsat-ipasir",
  "src/batsat-sudoku",
]

default-members = [
  "src/batsat",
  "src/batsat-bin",
  "src/batsat-ipasir",
]

[profile.release]
opt-level = 3
lto = true # helps a lot with inlining

# for `perf`:
# debug = true 

#debug-assertions = true

[profile.dev]
opt-level = 1
