[workspace]
resolver = "2"

members = [
    "src/platsat",
    "src/platsat-bin",
    "src/platsat-ipasir",
    "src/platsat-sudoku",
]

default-members = [
    "src/platsat",
    "src/platsat-bin",
    "src/platsat-ipasir",
]

[profile.release]
opt-level = 3
lto = "thin" # helps a lot with inlining

# for `perf`:
# debug = true

#debug-assertions = true

[profile.dev]
opt-level = 1
