opam-version: "2.0"
version: "0.2"
author: "simon.cruanes.2007@m4x.org"
synopsis: "SAT solver in rust with OCaml bindings"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest"] {with-test}
]
# TODO: add dependency on cargo?
depends: [
  "dune" {build}
  "odoc" {with-doc}
]
tags: [ "minisat" "solver" "SAT" ]
homepage: "https://github.com/c-cube/ocaml-minisat/"
dev-repo: "git+https://github.com/c-cube/ocaml-minisat.git"
bug-reports: "https://github.com/c-cube/ocaml-minisat/issues"
