[package]
name = "batsat-bin"
version = "0.0.2"
authors = ["Simon Cruanes", "Masaki Hara <ackie.h.gmai@gmail.com>"]
description = "SAT solver in Rust"
homepage = "https://github.com/c-cube/batsat"
repository = "https://github.com/c-cube/batsat"
readme = "README.md"
keywords = ["sat", "dimacs"]
categories = ["algorithms", "command-line-utilities"]
license = "MIT"

[dependencies]

clap = "2.31.2"
flate2 = "1.0"
cpu-time = "0.1"
batsat = {version="^0.2", path="../batsat"}
#batsat = {version="^0.2", path="../batsat", features=["logging"]}

log = {version = "0.4", optional=true}
env_logger = {version="0.5", optional=true}

[features]

default = []
logging = [ "log", "env_logger", "batsat/logging" ]
