[package]
name = "batsat-bin"
version = "0.0.3"
authors = ["Simon Cruanes", "Masaki Hara <ackie.h.gmai@gmail.com>"]
description = "SAT solver in Rust"
homepage = "https://github.com/c-cube/batsat"
repository = "https://github.com/c-cube/batsat"
readme = "README.md"
keywords = ["sat", "dimacs"]
categories = ["algorithms", "command-line-utilities"]
license = "MIT"
edition = "2018"

publish = false

[dependencies]

clap = { version = "^2.31", default-features=false}
flate2 = "1.0"
cpu-time = "0.1"
batsat = {version="^0.6", path="../batsat"}
#batsat = {version="^0.2", path="../batsat", features=["logging"]}

log = {version = "0.4", optional=true}
env_logger = {version="0.5", optional=true, default-features=false}

[features]

default = []
logging = [ "log", "env_logger", "batsat/logging" ]
