opam-version: "2.0"
version: "0.2"
author: "simon.cruanes.2007@m4x.org"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "-p" name]
]
build-doc: ["dune" "build" "@doc" "-p" name]
build-test: ["dune" "runtest"]
# TODO: add dependency on cargo?
depends: [
  "dune" {build}
  "odoc" {doc}
]
tags: [ "minisat" "solver" "SAT" ]
homepage: "https://github.com/c-cube/ocaml-minisat/"
dev-repo: "git+https://github.com/c-cube/ocaml-minisat.git"
bug-reports: "https://github.com/c-cube/ocaml-minisat/issues"
