
[package]
name = "batsat-term-allocator"
version = "0.0.2"
authors = ["Simon Cruanes"]
description = "term allocator with perfect sharing"
homepage = "https://github.com/c-cube/batsat"
repository = "https://github.com/c-cube/batsat"
readme = "README.md"
keywords = ["sat", "smt", "term-manager", "hasconsing"]
categories = ["algorithms"]
license = "MIT"

[dependencies]

typed-arena = "1.4"
fnv = "^1.0"  # fast hashmap
