[package]
name = "batsat"
version = "0.2.0"
authors = ["Simon Cruanes", "Masaki Hara <ackie.h.gmai@gmail.com>"]
description = "SAT solver in Rust"
homepage = "https://github.com/c-cube/batsat"
repository = "https://github.com/c-cube/batsat"
readme = "../../README.md"
keywords = ["sat", "minisat"]
categories = ["algorithms"]
license = "MIT"
edition = "2018"

[dependencies]

smallvec = "0.6"
bit-vec = "0.5.0"
log = {version="0.4", optional=true}

[features]

default=[]
logging = ["log"]
