[package]
name = "batsat"
version = "0.5.0"
authors = ["Simon Cruanes", "Masaki Hara <ackie.h.gmai@gmail.com>"]
description = "Extensible SAT solver in Rust"
homepage = "https://github.com/c-cube/batsat"
repository = "https://github.com/c-cube/batsat"
readme = "../../README.md"
keywords = ["sat", "minisat"]
categories = ["algorithms"]
license = "MIT"
edition = "2021"

publish = true

exclude = [
  "../../benchs", "../../papers", "../../scripts"
]

[dependencies]

bit-vec = { version = "0.6.3", default-features = false }
log = {version="0.4", optional=true}
bytemuck = { version = "1.14.0", default-features = false, features = ["must_cast", "derive"] }
no-std-compat = { version = "0.4.1", features = ["alloc"] }

[features]

default=[]
std = ["no-std-compat/std"]
logging = ["log"]
