[package]
name = "batsat"
version = "0.6.0"
authors = ["Simon Cruanes", "Masaki Hara <ackie.h.gmai@gmail.com>"]
description = "Extensible SAT solver in Rust"
homepage = "https://github.com/c-cube/batsat"
repository = "https://github.com/c-cube/batsat"
readme = "../../README.md"
keywords = ["sat", "minisat"]
categories = ["algorithms"]
license = "MIT"
edition = "2018"

publish = true

exclude = [
  "../../benchs", "../../papers", "../../scripts"
]

[dependencies]

bit-vec = "0.5.0"
log = {version="0.4", optional=true}

[features]

default=[]
logging = ["log"]
