[package]
name = "platsat"
version = "0.5.0"
authors = ["David Ewert", "Simon Cruanes", "Masaki Hara <ackie.h.gmai@gmail.com>"]
description = "Extensible SAT solver in Rust"
homepage = "https://github.com/dewert99/platsat"
repository = "https://github.com/dewert99/platsat"
readme = "../../README.md"
keywords = ["sat", "minisat"]
categories = ["algorithms"]
license = "MIT"
edition = "2021"

publish = true

exclude = [
  "../../benchs", "../../papers", "../../scripts"
]

[dependencies]

bit-vec = { version = "0.6.3", default-features = false }
log = {version="0.4", optional=true}
bytemuck = { version = "1.14.0", default-features = false, features = ["must_cast", "derive", "extern_crate_alloc"] }
no-std-compat = { version = "0.4.1", features = ["alloc"] }
default-vec2 = "0.1.3"

[features]

default=[]
std = ["no-std-compat/std"]
logging = ["log"]
