
(rule
 (targets libbatsat_stubs%{ext_lib} dllbatsat_stubs%{ext_dll}) ;libbatsat_c.so)
 (deps ./lib.rs ../Cargo.toml (source_tree ../batsat) (source_tree ../vendor) ../.cargo/config)
 ;(mode fallback)
 (action
  (progn
    (chdir ..
      (progn
       (run cp -r vendor src/)
       (run cp -r ../../../../src/batsat ..)
       (chdir src
         (system "if [ \"$(uname)\" = \"Darwin\" ]; then
                    RUSTFLAGS='-L %{ocaml-config:standard_library} -lcamlrun' cargo build --release --frozen
                  else
                    cargo build --release --frozen
                  fi"))))
    ; TODO: strip the libs first
    (run cp ../target/release/libbatsat_stubs%{ext_lib} .)
    (system "[ -f ../target/release/libbatsat_stubs.so ] && cp ../target/release/libbatsat_stubs.so dllbatsat_stubs%{ext_dll} || cp ../target/release/libbatsat_stubs.dylib dllbatsat_stubs%{ext_dll}")
    )))

(library
  (name batsat)
  (public_name batsat)
  (libraries threads)
  (wrapped false)
  (modules batsat)
  (flags :standard -safe-string -w @8)
  (c_library_flags :standard -ldl -lpthread) ; -lbatsat_c) ; -static)
  ;(modes native)
  (self_build_stubs_archive (libbatsat_stubs)) ; custom!
  ;(c_names batsat_stubs)
  (c_flags -fPIC -std=c99)
  )
